[package]
name = "websoc-kit"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
authors = ["Todd Everett Griffin <tgriffin115@gmail.com>"]
repository = "https://github.com/goddtriffin/websoc-kit"
homepage = "https://www.toddgriffin.me/"
description = "A highly-opinionated Websocket tooling kit."
license = "MIT"
keywords = ["websocket", "websockit", "websoc-kit", "tools", "tooling"]
categories = ["web-programming::websocket", "web-programming", "network-programming", "api-bindings", "asynchronous"]
include = ["**/*.rs", "Cargo.toml", ".clippy.toml", "LICENSE", "README.md"]

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[lints.clippy]
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 1 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
# tokio
tokio = { version = "1.40.0", features = ["full", "tracing"] }

# futures
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
  "sink",
  "std",
] }

# axum
axum = { version = "0.7.6", features = [
  "ws",
  "multipart",
  "tracing",
  "macros",
  "tokio",
] }
axum-extra = "0.9.4"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }

# websockets
tokio-tungstenite = "0.24.0"

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# uuid
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
